# audible-cli

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .sshignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.md  README.md  audible.spec  codecov.yml  flake.nix  noxfile.py  pyi_entrypoint.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/: FUNDING.yml  dependabot.yml  labels.yml
.github/workflows/: build.yml  constraints.txt  labeler.yml  nix.yml  pypi-publish-test.yml  pypi-publish.yml  tests.yml  uv-lock-maintenance.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
nix/: default.nix  isbntools.nix  overlays.nix
plugin_cmds/: README.md  cmd_activation-bytes.py  cmd_decrypt.py  cmd_get-annotations.py  cmd_goodreads-transform.py  cmd_image-urls.py  cmd_listening-stats.py  cmd_remove-encryption.py  cmd_remove-encryption.py.bak  convert_oa_cred.py
src/audible_cli/: __init__.py  __main__.py  _logging.py  _version.py  cli.py  cmd_download.py  cmd_library.py  cmd_manage.py  cmd_quickstart.py  config.py  constants.py  decorators.py  downloader.py  exceptions.py  models.py  options.py  plugins.py  utils.py
src/audible_cli/cmds/: __init__.py  cmd_activation_bytes.py  cmd_api.py  cmd_db.py  cmd_download.py  cmd_library.py  cmd_manage.py  cmd_plugins.py  cmd_quickstart.py  cmd_update_check.py  cmd_wishlist.py
src/audible_cli/cmds/db_cmds/: __init__.py  cmd_assets.py  cmd_library.py
src/audible_cli/db/: __init__.py  async_db_assets.py  async_db_library.py  common.py
tests/: __init__.py  test_main.py
utils/: update_chapter_titles.py
utils/code_completion/: README.md  audible-complete-bash.sh  audible-complete-fish.sh  audible-complete-zsh-fish.sh  audible-complete-zsh.sh
utils/code_completition/: audible-complete-zsh-fish.sh
