[project]
name = "audible-cli"
version = "0.3.2"
description = "Command line interface (cli) for the audible package."
authors = [{ name = "mkb79", email = "mkb79@hackitall.de" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = [
    "Audible",
    "API",
    "async",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles",
    "audible>=0.8.2",
    "click>=8",
    "colorama; platform_system=='Windows'",
    "httpx>=0.23.3,<0.28.0",
    "packaging",
    "Pillow",
    "tabulate",
    "toml",
    "tqdm",
    "questionary",
]
homepage = "https://github.com/mkb79/audible-cli"
repository = "https://github.com/mkb79/audible-cli"
documentation = "https://audible-cli.readthedocs.io/"

[project.urls]
Changelog = "https://github.com/mkb79/audible-cli/releases"

[project.scripts]
audible = "audible_cli:main"
audible-quickstart = "audible_cli:quickstart"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "nox-uv>=0.3.0",
    "pyinstaller",
]
docs = [
    "myst-parser>=0.16.1",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.22",
    "sphinx-rtd-theme>=1.2.0",
    "sphinxcontrib-httpdomain>=1.8.1",
]
mypy = [
    "mypy>=0.930",
    "types-docutils>=0.21.0.20250516",
    "types-html5lib>=1.1.11.20250516",
    "types-pygments>=2.19.0.20250516",
    "types-aiofiles>=24.1.0.20250516",
    "types-tabulate>=0.9.0.20241207",
    "types-toml>=0.10.8.20240310",
    "types-tqdm>=4.67.0.20250516",
]
pre-commit = [
    "darglint>=1.8.1",
    "nox>=2025.5.1",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "ruff>=0.3.7",
]
safety = [
    "safety>=1.10.3",
]
tests = [
    "coverage[toml]>=6.2",
    "pytest>=6.2.5",
    "pytest-mock>=3.10.0",
]
typeguard = [
    {include-group = "tests"},
    "Pygments>=2.10.0",
    "typeguard>=2.13.3",
]
xdocs = [
    "xdoctest[colors]>=0.15.10",
]


[tool.hatch.build.targets.sdist]
include = ["src/audible_cli"]

[tool.hatch.build.targets.wheel]
include = ["src/audible_cli"]

[tool.hatch.build.targets.wheel.sources]
"src/audible_cli" = "audible_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.7.1"

[tool.coverage.paths]
source = ["src/audible_cli", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src/audible_cli", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 10  # temporarily drop complexity, target is 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[tool.ruff]
#  missing rst-docstrings check, these should be adding through ruff
line-length = 88
src = ["src", "plugin_cmds", "utils"]
target-version = "py310"
output-format = "grouped"

[tool.ruff.lint]
ignore = [
    "D10",  # temporarily ignore missing docstrings
    "E501",
    "N818",
    "PLR0912",  # temporarily
    "PLR0913",  # temporarily
    "PLR0915",  # temporarily
    "PLR2004",  # temporarily
]
select=[
    "A",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "PGH",
    "PL",
    "Q",
    "RUF",
    "S",
    "UP",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 21  # temporarily raise complexity, target is 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["audible_cli"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/audible_cli"]
